--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -37,8 +37,13 @@ docker run pandoc/extra
 Con el siguiente comando y los siguientes ficheros de configuración me genero este [PDF](/assets/img/pandoc/2024-03-01-tarea-xsl.pdf) a mi gusto:
 
 ```console
-docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf --metadata-file
- /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml --lua-filter /data/pandoc/filter.lua
+docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" `
+--volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
+pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md `
+-o /data/pdf/2024-03-01-tarea-xsl.pdf `
+--metadata-file /data/pandoc/metadata.yaml `
+--defaults /data/pandoc/defaults.yaml `
+--lua-filter /data/pandoc/filter.lua
 ```
 
 ```yaml
