--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -255,6 +255,230 @@ Actualmente estoy usando para esta web [Jekyll](https://jekyllrb.com/) con el [t
 - [MkDocs](https://www.mkdocs.org/) con [Material for MkDocs](https://squidfunk.github.io/mkdocs-material/)
 - [VuePress](https://vuepress.vuejs.org/) con [VuePress Theme Hope](https://theme-hope.vuejs.press/)
 
+## DOCX a Markdown
+
+Una de las ventajas que tiene Markdown sobre DOCX es que se puede leer desde cualquier dispositivo cómodamente.
+
+```powershell
+docker run --rm --volume "<carpeta donde esta el Docx>\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/<nombre del docx>.docx" `
+-o "/data/<nombre del md de salida>.md"
+```
+
+Ejemplo de uso:
+
+```powershell
+$number="01"
+$creator="mruizg"
+$title="Representación y comunicación de la información"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="02"
+$title="Elementos funcionales de un ordenador digital"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="03"
+$title="Componentes, estructura y funcionamiento de la Unidad Central de Proceso"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="04"
+$title="Memoria interna. Tipos. Direccionamiento. Características y funciones"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="05"
+$title="Microprocesadores. Estructura. Tipos. Comunicación con el exterior"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="06"
+$title="Sistemas de almacenamiento externo. Tipos. Características y funcionamiento"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="07"
+$title="Dispositivos periféricos de entradasalida. Características y funcionamiento"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="08"
+$title="Hardware comercial de un ordenador. Placa base. Tarjetas controladoras de dispositivos y de entradasalida"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="10"
+$title="Representación interna de los datos"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="52"
+$title="Sistemas en red. Tipos. Componentes y topologías"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="53"
+$title="Transmisión de datos. Medios. Tipos. Técnicas. Perturbaciones"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="54"
+$title="Arquitectura de sistemas de comunicación. Niveles. Funciones. Servicios"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="55"
+$title="Conexión de ordenadores en red. Elementos hardware necesarios. Tipos y características"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="56"
+$title="Software de sistemas en red. Componentes. Funciones y estructura"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="57"
+$title="Redes de área local. Hardware. Software. Recursos compartidos"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="58"
+$title="Redes de área extensa. Interconexión redes locales"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="59"
+$title="Análisis e implantación de un sistema en red"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="60"
+$title="Instalación y configuración de sistemas en red local"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="61"
+$title="Integración de sistemas. Medios de interconexión estándares"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="62"
+$title="Evaluación y mejora del rendimiento de sistemas en red"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="63"
+$title="Seguridad de los sistemas en red"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="64"
+$title="Explotación y administración de sistemas en red"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+$number="65"
+$title="Análisis comparativo entre un sistema operativo multiusuario y un sistema en red"
+$folder="$number-$title"
+$file="$number-$creator-$title"
+docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
+pandoc/extra -t markdown_strict --extract-media='./' `
+"/data/$file.docx" `
+-o "/data/$file.md"
+
+```
+
 ## Bibliografía
 
 - <https://github.com/Wandmalfarbe/pandoc-latex-template?tab=readme-ov-file>
