--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -255,7 +255,7 @@ Actualmente estoy usando para esta web [Jekyll](https://jekyllrb.com/) con el [t
 - [MkDocs](https://www.mkdocs.org/) con [Material for MkDocs](https://squidfunk.github.io/mkdocs-material/)
 - [VuePress](https://vuepress.vuejs.org/) con [VuePress Theme Hope](https://theme-hope.vuejs.press/)
 
-## DOCX a Markdown
+## Docx a Markdown
 
 Una de las ventajas que tiene Markdown sobre DOCX es que se puede leer desde cualquier dispositivo cómodamente.
 
@@ -268,216 +268,57 @@ pandoc/extra -t markdown_strict --extract-media='./' `
 
 Ejemplo de uso:
 
-```powershell
-$number="01"
-$creator="mruizg"
-$title="Representación y comunicación de la información"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
+```ps1
+$creator = "mruizg"
 
-$number="02"
-$title="Elementos funcionales de un ordenador digital"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
+$numbers = @("01", "02", "03", "04", "05", "06", "07", "08", "10", "52", "53", "54", "55", "56", "57", "58", "59", "60", "61", "62", "63", "64", "65")
 
-$number="03"
-$title="Componentes, estructura y funcionamiento de la Unidad Central de Proceso"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
+$titles = @(
+  "Representación y comunicación de la información", 
+  "Elementos funcionales de un ordenador digital", 
+  "Componentes, estructura y funcionamiento de la Unidad Central de Proceso", 
+  "Memoria interna. Tipos. Direccionamiento. Características y funciones", 
+  "Microprocesadores. Estructura. Tipos. Comunicación con el exterior", 
+  "Sistemas de almacenamiento externo. Tipos. Características y funcionamiento", 
+  "Dispositivos periféricos de entradasalida. Características y funcionamiento", 
+  "Hardware comercial de un ordenador. Placa base. Tarjetas controladoras de dispositivos y de entradasalida", 
+  "Representación interna de los datos", 
+  "Sistemas en red. Tipos. Componentes y topologías", 
+  "Transmisión de datos. Medios. Tipos. Técnicas. Perturbaciones", 
+  "Arquitectura de sistemas de comunicación. Niveles. Funciones. Servicios", 
+  "Conexión de ordenadores en red. Elementos hardware necesarios. Tipos y características", 
+  "Software de sistemas en red. Componentes. Funciones y estructura", 
+  "Redes de área local. Hardware. Software. Recursos compartidos", 
+  "Redes de área extensa. Interconexión redes locales", 
+  "Análisis e implantación de un sistema en red", 
+  "Instalación y configuración de sistemas en red local", 
+  "Integración de sistemas. Medios de interconexión estándares", 
+  "Evaluación y mejora del rendimiento de sistemas en red", 
+  "Seguridad de los sistemas en red", 
+  "Explotación y administración de sistemas en red", 
+  "Análisis comparativo entre un sistema operativo multiusuario y un sistema en red"
+)
 
-$number="04"
-$title="Memoria interna. Tipos. Direccionamiento. Características y funciones"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
+for ($i = 0; $i -lt $titles.Count; $i++) {
+  $number = $numbers[$i]
+  $title = $titles[$i]
+  $folder = "$number-$title"
+  $file = "$number-$creator-$title"
 
-$number="05"
-$title="Microprocesadores. Estructura. Tipos. Comunicación con el exterior"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
+  $volumePath = "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder"
+  $dockerVolume = '"' + $volumePath + ':/data"'
 
-$number="06"
-$title="Sistemas de almacenamiento externo. Tipos. Características y funcionamiento"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="07"
-$title="Dispositivos periféricos de entradasalida. Características y funcionamiento"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="08"
-$title="Hardware comercial de un ordenador. Placa base. Tarjetas controladoras de dispositivos y de entradasalida"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="10"
-$title="Representación interna de los datos"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="52"
-$title="Sistemas en red. Tipos. Componentes y topologías"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="53"
-$title="Transmisión de datos. Medios. Tipos. Técnicas. Perturbaciones"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="54"
-$title="Arquitectura de sistemas de comunicación. Niveles. Funciones. Servicios"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="55"
-$title="Conexión de ordenadores en red. Elementos hardware necesarios. Tipos y características"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="56"
-$title="Software de sistemas en red. Componentes. Funciones y estructura"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="57"
-$title="Redes de área local. Hardware. Software. Recursos compartidos"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="58"
-$title="Redes de área extensa. Interconexión redes locales"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="59"
-$title="Análisis e implantación de un sistema en red"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="60"
-$title="Instalación y configuración de sistemas en red local"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="61"
-$title="Integración de sistemas. Medios de interconexión estándares"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="62"
-$title="Evaluación y mejora del rendimiento de sistemas en red"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="63"
-$title="Seguridad de los sistemas en red"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="64"
-$title="Explotación y administración de sistemas en red"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
-$number="65"
-$title="Análisis comparativo entre un sistema operativo multiusuario y un sistema en red"
-$folder="$number-$title"
-$file="$number-$creator-$title"
-docker run --rm --volume "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
-"/data/$file.docx" `
--o "/data/$file.md"
-
+  docker run --rm --volume $dockerVolume `
+    pandoc/extra --extract-media='./' `
+    "/data/$file.docx" `
+    --wrap=none `
+    -o "/data/$file.md"
+}
 ```
+{: file="docxToMd.ps1" }
+
+> Si copias este texto en un fichero `.ps1` deberá ser en codificación Windows 1252.
+{:.prompt-warning}
 
 ## Bibliografía
 
