--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -8,9 +8,11 @@ img_path: /assets/img/pandoc/
 
 ## Introducción
 
-Este artículo pretende ser una guía para transformar documentos de Markdown a documentos PDF.
+Este artículo pretende ser una guía para transformar documentos con Pandoc.
 
 ## Instalar Eisvogel en Windows
+
+La herramienta que se usa para transformar documentos es Pandoc con la plantilla Eisvogel.
 
 Puedes seguir los pasos del README de <https://github.com/Wandmalfarbe/pandoc-latex-template?tab=readme-ov-file>.
 
@@ -32,7 +34,7 @@ Ejemplo:
 docker run pandoc/extra
 ```
 
-## De documentos Markdown para Jekyll a documentos PDF
+## De Markdown para Jekyll a documentos PDF
 
 Con el siguiente comando y los siguientes ficheros de configuración me genero este [PDF](/assets/img/pandoc/2024-03-01-tarea-xsl.pdf) a mi gusto:
 
@@ -45,6 +47,34 @@ pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md `
 --defaults /data/pandoc/defaults.yaml `
 --lua-filter /data/pandoc/filter.lua
 ```
+
+```ps1
+# Definir los patrones de archivo
+$routes = "representacion-informacion", "introduccion-lenguajes-marcas", "xml", "html", "css", "sindicacion-contenidos", "dtd", "xsd", "espacios-de-nombres-xml", "xsl", "xpath", "xslt", "xslfo", "xquery", "sistemas-gestion-empresarial", "tarea-formato-svg", "tarea-introduccion-xml", "practica-html", "practica-html-freecodecamp", "practica-html-w3schools", "practica-css-freecodecamp", "practica-css-w3schools", "practica-css-codepip", "tarea-calculadora-html-css", "tarea-rss", "tarea-dtd", "tarea-xsd", "tarea-introduccion-xpath", "markdown", "tarea-xsl", "tarea-introduccion-xquery", "tarea-introduccion-odoo"
+
+# Iterar sobre cada patrón de archivo
+foreach ($route in $routes) {
+  $pattern = "[0-9\-]{11}" + $route + "\.md"
+
+  # Obtener el archivo correspondiente al patrón
+  $files = Get-ChildItem "D:\GitHub\marcosruiz.github.io\_posts" | Where-Object { $_.Name -match $pattern }
+
+  $file = $files[0]
+
+  $resourcePath = "/data/assets/img/" + $route
+
+  # Ejecutar el comando Docker Pandoc para el archivo encontrado
+  docker run --rm --volume "D:\GitHub\marcosruiz.github.io\:/data" `
+    --volume "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
+    pandoc/extra "/data/_posts/$($file.Name)" `
+    -o "/data/pdf/$($file.BaseName).pdf" `
+    --metadata-file /data/pandoc/metadata.yaml `
+    --defaults /data/pandoc/defaults.yaml `
+    --resource-path $resourcePath `
+    --lua-filter /data/pandoc/filter.lua
+}
+```
+{: file="exportarLmsgiAPdf.ps1" }
 
 ```yaml
 listings: true
@@ -63,6 +93,24 @@ toc: true
 lang: es-ES
 ```
 {: file="metadata.yaml" }
+
+En mi caso, añado las siguientes clases CSS personalizadas:
+
+- `section`
+- `subsection`
+- `subsubsection`
+- `question`
+
+Además por usar el [tema Chirpy](https://chirpy.cotes.page/) el cual usa las siguientes clases:
+
+- `filepath`
+- `prompt-tip`
+- `prompt-info`
+- `prompt-warning`
+- `prompt-danger`
+- `file` con la información del nombre del fichero.
+
+Es por esto que necesito los siguientes filtros Lua:
 
 ```lua
 -- Filtro para clase activity
@@ -193,7 +241,7 @@ return {
   {Para = ParaActivity},
   {Para = ParaSection},
   {Para = ParaSubsection},
-  {Para = ParaSubsubsetion},
+  {Para = ParaSubsubsection},
   {Para = RemovePrompts},
   {Para = RemoveFilepaths},
   {Para = ExtractFilePath}
@@ -203,7 +251,7 @@ return {
 
 ## De documentos Markdown para Notion a documentos PDF
 
-Con Markdown sería mucho más sencillo de generar.
+Con Markdown sería mucho más sencillo de generar:
 
 ```console
 docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf --metadata-file
@@ -226,42 +274,13 @@ lang: es-ES
 ```
 {: file="metadata.yaml" }
 
-### Interpretar clases de css
-
-En mi caso, añado las siguientes clases personalizadas:
-
-- `section`
-- `subsection`
-- `subsubsection`
-- `question`
-
-Además por usar el [tema Chirpy](https://chirpy.cotes.page/) el cual usa las siguientes clases:
-
-- `filepath`
-- `prompt-tip`
-- `prompt-info`
-- `prompt-warning`
-- `prompt-danger`
-- `file` con la información del nombre del fichero.
-
-### Interpretar código HTML
-
-Debo ser capaz de transformar el código HTML a texto.
-
-## Alternativas a Jekyll
-
-Actualmente estoy usando para esta web [Jekyll](https://jekyllrb.com/) con el [tema Chirpy](https://github.com/cotes2020/jekyll-theme-chirpy) pero existen alternativas:
-
-- [MkDocs](https://www.mkdocs.org/) con [Material for MkDocs](https://squidfunk.github.io/mkdocs-material/)
-- [VuePress](https://vuepress.vuejs.org/) con [VuePress Theme Hope](https://theme-hope.vuejs.press/)
-
-## Docx a Markdown
+## De Docx a Markdown
 
 Una de las ventajas que tiene Markdown sobre DOCX es que se puede leer desde cualquier dispositivo cómodamente.
 
 ```powershell
 docker run --rm --volume "<carpeta donde esta el Docx>\:/data" `
-pandoc/extra -t markdown_strict --extract-media='./' `
+pandoc/extra --extract-media='./' `
 "/data/<nombre del docx>.docx" `
 -o "/data/<nombre del md de salida>.md"
 ```
@@ -319,6 +338,13 @@ for ($i = 0; $i -lt $titles.Count; $i++) {
 
 > Si copias este texto en un fichero `.ps1` deberá ser en codificación Windows 1252.
 {:.prompt-warning}
+
+## Alternativas a Jekyll
+
+Actualmente estoy usando para esta web [Jekyll](https://jekyllrb.com/) con el [tema Chirpy](https://github.com/cotes2020/jekyll-theme-chirpy) pero existen alternativas:
+
+- [MkDocs](https://www.mkdocs.org/) con [Material for MkDocs](https://squidfunk.github.io/mkdocs-material/)
+- [VuePress](https://vuepress.vuejs.org/) con [VuePress Theme Hope](https://theme-hope.vuejs.press/)
 
 ## Bibliografía
 
