--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -48,8 +48,11 @@ pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md `
 --lua-filter /data/pandoc/filter.lua
 ```
 
-```ps1
+```powershell
 # Definir los patrones de archivo
+$githubProjectFolder = "D:\GitHub\marcosruiz.github.io"
+$templateFolder = "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel"
+
 $routes = "representacion-informacion", "introduccion-lenguajes-marcas", "xml", "html", "css", "sindicacion-contenidos", "dtd", "xsd", "espacios-de-nombres-xml", "xsl", "xpath", "xslt", "xslfo", "xquery", "sistemas-gestion-empresarial", "tarea-formato-svg", "tarea-introduccion-xml", "practica-html", "practica-html-freecodecamp", "practica-html-w3schools", "practica-css-freecodecamp", "practica-css-w3schools", "practica-css-codepip", "tarea-calculadora-html-css", "tarea-rss", "tarea-dtd", "tarea-xsd", "tarea-introduccion-xpath", "markdown", "tarea-xsl", "tarea-introduccion-xquery", "tarea-introduccion-odoo"
 
 # Iterar sobre cada patrón de archivo
@@ -57,17 +60,17 @@ foreach ($route in $routes) {
   $pattern = "[0-9\-]{11}" + $route + "\.md"
 
   # Obtener el archivo correspondiente al patrón
-  $files = Get-ChildItem "D:\GitHub\marcosruiz.github.io\_posts" | Where-Object { $_.Name -match $pattern }
+  $files = Get-ChildItem "$githubProjectFolder\_posts" | Where-Object { $_.Name -match $pattern }
 
   $file = $files[0]
 
   $resourcePath = "/data/assets/img/" + $route
 
   # Ejecutar el comando Docker Pandoc para el archivo encontrado
-  docker run --rm --volume "D:\GitHub\marcosruiz.github.io\:/data" `
-    --volume "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
+  docker run --rm --volume "$($githubProjectFolder):/data" `
+    --volume "$($templateFolder):/root/.pandoc/templates" `
     pandoc/extra "/data/_posts/$($file.Name)" `
-    -o "/data/pdf/$($file.BaseName).pdf" `
+    -o "/data/pdf/$($route).pdf" `
     --metadata-file /data/pandoc/metadata.yaml `
     --defaults /data/pandoc/defaults.yaml `
     --resource-path $resourcePath `
@@ -237,6 +240,29 @@ function ExtractFilePath(el)
   return el
 end
 
+function removeEmojis(el)
+  if el.tag == "Str" then
+    local content = pandoc.utils.stringify(el)
+    local palabras = {"🥳", "📸", "👏", "😮", "🔥", "🔝", "🙌", "👌", "取", "得", "𐐝"}
+    -- Recorrer la array
+    for i, palabra in ipairs(palabras) do
+      content = content:gsub(palabra, "")
+    end
+    return pandoc.Str(content)
+  end
+  return el
+end
+
+function removeCyrilic(el)
+  if el.tag == "Str" then
+    local content = pandoc.utils.stringify(el)
+    local patron = "[дЖ]"
+    content = content:gsub(patron, "")
+    return pandoc.Str(content)
+  end
+  return el
+end
+
 return {
   {Para = ParaActivity},
   {Para = ParaSection},
@@ -244,7 +270,9 @@ return {
   {Para = ParaSubsubsection},
   {Para = RemovePrompts},
   {Para = RemoveFilepaths},
-  {Para = ExtractFilePath}
+  {Para = ExtractFilePath},
+  {Str = removeEmojis},
+  {Str = removeCyrilic}
 }
 ```
 {: file="filter.lua" }
@@ -254,8 +282,13 @@ return {
 Con Markdown sería mucho más sencillo de generar:
 
 ```console
-docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf --metadata-file
- /data/pandoc/metadata.yaml --defaults /data/pandoc/defaults.yaml
+$githubProjectFolder = "C:\Users\marco\Documents\GitHub\marcosruiz.github.io"
+$templatesFolder = "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel"
+docker run --rm --volume "$githubProjectFolder:/data" `
+--volume "%templatesFolder:/root/.pandoc/templates" `
+pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md -o /data/pdf/2024-03-01-tarea-xsl.pdf `
+--metadata-file /data/pandoc/metadata.yaml `
+--defaults /data/pandoc/defaults.yaml
 ```
 
 ```yaml
@@ -287,7 +320,8 @@ pandoc/extra --extract-media='./' `
 
 Ejemplo de uso:
 
-```ps1
+```powershell
+$temasPropiosFolder = "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\"
 $creator = "mruizg"
 
 $numbers = @("01", "02", "03", "04", "05", "06", "07", "08", "10", "52", "53", "54", "55", "56", "57", "58", "59", "60", "61", "62", "63", "64", "65")
@@ -324,7 +358,7 @@ for ($i = 0; $i -lt $titles.Count; $i++) {
   $folder = "$number-$title"
   $file = "$number-$creator-$title"
 
-  $volumePath = "C:\Users\marco\MEGA\OPOS\SAI\SAI Temas\00 SAI Temas propios\$folder"
+  $volumePath = $temasPropiosFolder + $folder
   $dockerVolume = '"' + $volumePath + ':/data"'
 
   docker run --rm --volume $dockerVolume `
