--- a/_posts/2024-02-12-xslt.md
+++ b/_posts/2024-02-12-xslt.md
@@ -3,7 +3,7 @@ title: "¿Qué es XSLT?"
 date: 2024-02-12 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría]
-img_path: /assets/img/xsl/
+img_path: /assets/img/xslt/
 ---
 
 {:.section}
