--- a/_posts/2022-09-19-html.md
+++ b/_posts/2022-09-19-html.md
@@ -50,11 +50,11 @@ Ahora veremos cómo combinar los elementos individuales para formar una página 
 </html>
 ```
 
-- `<!DOCTYPE html>`: El elemento doctype. En sus inicios, cuando el HTML llevaba poco tiempo (alrededor de 1991-1992), los doctypes servían como enlaces al conjunto de reglas que la página HTML debía seguir para que fuera considerado buen HTML. En la actualidad se ignora y se considera un legado histórico que hay que incluir para que todo funcione correctamente. 
+- `<!DOCTYPE html>`: El elemento doctype. En sus inicios, cuando el HTML llevaba poco tiempo (alrededor de 1991-1992), los doctypes servían como enlaces al conjunto de reglas que la página HTML debía seguir para que fuera considerado buen HTML. En la actualidad se ignora y se considera un legado histórico que hay que incluir para que todo funcione correctamente.
 - `<html></html>`: El elemento `<html>`. Este elemento envuelve todo el contenido de la página. A veces se lo conoce como el elemento raíz.
 - `<head></head>`: El elemento `<head>` (cabecera). Este elemento actúa como contenedor para todos los parámetros que quieras incluir en el documento HTML que no serán visibles a los visitantes de la página.
 - `<meta charset="utf-8">`: Este elemento establece que tu documento HTML usará la codificación UTF-8, que incluye la gran mayoría de caracteres de todos los idiomas humanos escritos.
-- `<title></title>`: El elemento <title>. Este establece el título de la página, que es el título que aparece en la pestaña del navegador en la que se carga la página.
+- `<title></title>`: El elemento `<title>`. Este establece el título de la página, que es el título que aparece en la pestaña del navegador en la que se carga la página.
 - `<body></body>`: El elemento `<body>`. Contiene todo el contenido que quieres mostrar a los usuarios cuando visitan tu página, ya sea texto, imágenes, vídeos, juegos, pistas de audio reproducibles o cualquier otra cosa.
 
 <details class="card mb-2">
@@ -160,7 +160,7 @@ Todos los siguientes ejemplos son correctos y equivalentes:
   <summary class="card-header question">¿Qué es un lenguaje de programación?</summary>
   <div class="card-body" markdown="1">
 
-Un lenguaje de programación es un lenguaje formal que le proporciona a una persona, en este caso el programador, la capacidad de escribir (o programar) una serie de instrucciones o secuencias de órdenes en forma de algoritmos con el fin de controlar el comportamiento físico o lógico de un sistema informático, de manera que se puedan obtener diversas clases de datos o ejecutar determinadas tareas. 
+Un lenguaje de programación es un lenguaje formal que le proporciona a una persona, en este caso el programador, la capacidad de escribir (o programar) una serie de instrucciones o secuencias de órdenes en forma de algoritmos con el fin de controlar el comportamiento físico o lógico de un sistema informático, de manera que se puedan obtener diversas clases de datos o ejecutar determinadas tareas.
 
 A todo este conjunto de órdenes escritas mediante un lenguaje de programación se le denomina programa informático.
 
@@ -190,7 +190,6 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 ¿Cuáles son los pasos que debo seguir para poder ver que información estaría enviando a un servidor desde un formulario?
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/u1JRC24rUfk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 
 <details class="card mb-2">
   <summary class="card-header"> Preguntas sobre el vídeo</summary>
@@ -223,4 +222,4 @@ HTML ("Hypertext Markup Language") no es un lenguaje de programación. Es un len
 - [HTML: Lenguaje de etiquetas de hipertexto (Developer Mozilla)](https://developer.mozilla.org/es/docs/Web/HTML)
 - [HTML Tutorial (W3Schools)](https://www.w3schools.com/html/)
 - [Lenguaje HTML5](https://lenguajehtml.com/html/introduccion/que-es-html/)
-- [Atributos booleanos en HTML ](http://notasjs.blogspot.com/2014/02/atributos-booleanos-en-html.html)
+- [Atributos booleanos en HTML](http://notasjs.blogspot.com/2014/02/atributos-booleanos-en-html.html)
