--- a/_posts/2024-02-12-xslt.md
+++ b/_posts/2024-02-12-xslt.md
@@ -112,7 +112,7 @@ Estas etiquetas son:
   - El atributo `match` indica los elementos afectados por la plantilla y contiene una expresión XPath.
   - El contenido de la instrucción define la transformación a aplicar (si la instrucción no contiene nada, como en el ejemplo anterior, sustituirá el nodo por nada, es decir, eliminará el nodo, aunque conservará el texto contenido en el elemento).
   
-Cuando se aplica una plantilla a un nodo, en principio no se recorren los nodos descendientes. Para indicar que sí queremos recorrer los nodos descendientes y aplicarles las plantillas que les correspondan, hay que utilizar la instrucción <xsl:apply-templates />, como en el ejemplo siguiente:
+Cuando se aplica una plantilla a un nodo, en principio no se recorren los nodos descendientes. Para indicar que sí queremos recorrer los nodos descendientes y aplicarles las plantillas que les correspondan, hay que utilizar la instrucción `<xsl:apply-templates />`, como en el ejemplo siguiente:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -187,7 +187,7 @@ Elementos hijo de `xsl:stylesheet`:
 
 - `xsl:import`: Incluye una hoja de estilo XSLT externa en el documento de salida.
 - `xsl:include`: Incluye una hoja de estilo XSLT externa en el documento de salida.
-- `xsl:strip-space`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
+- `xsl:strip-space`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco.
 - `xsl:preserve-space`: Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
 - `xsl:output`: Define el formato del documento de salida
 - `xsl:key`: Declara una clave para la búsqueda de nodos.
@@ -316,7 +316,7 @@ Y un XSLT que indica como se transforma dicho XML:
 ```
 {: file="transformacion.xsl" }
 
-Si aplicamos la tranformación obtenemos un fichero HTML que en el navegador se ve de la siguiente manera:
+Si aplicamos la transformación obtenemos un fichero HTML que en el navegador se ve de la siguiente manera:
 
 ![Fichero HTML resultado abierto en un navegador](resultadoHtml.png)
 _Fichero HTML resultado abierto en un navegador_
@@ -416,7 +416,7 @@ _Fichero HTML resultado abierto en un navegador_
 - `xsl:preserve-space`:  Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
 - `xsl:strip-space`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
 - `xsl:import`: Incluye una hoja de estilo XSLT externa en el documento de salida.
-- `xsl:apply-imports`: El elemento xsl:apply-imports permite buscar la plantilla adecuada para el nodo de contexto. Para ello se tienen en cuenta los nodos de contexto importados a través de `xsl:import`.
+- `xsl:apply-imports`: El elemento `xsl:apply-imports` permite buscar la plantilla adecuada para el nodo de contexto. Para ello se tienen en cuenta los nodos de contexto importados a través de `xsl:import`.
 - `xsl:include`: Incluye una hoja de estilo XSLT externa en el documento de salida.
 - `xsl:variable`: Mediante este elemento podemos definir variables. Cuando se usa como elemento de alto nivel se definen variables globales, que son válidas en toda la hoja de estilo. De no ser así, las variables tendrán validez local.
 - `xsl:with-param`: Se define el valor de un parámetro que se pasará a una plantilla.
@@ -436,10 +436,10 @@ Si aplicamos varias plantillas a la vez, cada regla tiene una prioridad que pued
 
 | Patrón                                                                                                                                                                           | Prioridad |
 |----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------|
-| ´*´, ´@*´, ´text()´ y otros patrones para los que no se indica un nombre concreto.                                                                                               |    -0.5   |
-| ´Prefijo:*´, ´@prefijo:´ y otros patrones para los que se indica el espacio de nombres, pero no el nombre concreto.                                                              |   -0.25   |
-| ´producto´, ´@unidades´ y otros patrones donde se indiquen los nombres de los elementos y atributos concretos.                                                                   |     0     |
-| ´proveedor/representante´, ´/productos/producto/precio´, ´precio/@unidades´ y otros patrones para los que se indique una jerarquía (además del nombre del elemento y/o atributo) |    0.5    |
+| `*`, `@*`, `text()` y otros patrones para los que no se indica un nombre concreto.                                                                                               |    -0.5   |
+| `Prefijo:*`, `@prefijo:` y otros patrones para los que se indica el espacio de nombres, pero no el nombre concreto.                                                              |   -0.25   |
+| `producto`, `@unidades` y otros patrones donde se indiquen los nombres de los elementos y atributos concretos.                                                                   |     0     |
+| `proveedor/representante`, `/productos/producto/precio`, `precio/@unidades` y otros patrones para los que se indique una jerarquía (además del nombre del elemento y/o atributo) |    0.5    |
 
 Se puede asignar prioridades de manera explícita mediante el atributo priority. Por ejemplo:
 
@@ -555,7 +555,7 @@ En el caso más extremo, si la plantilla vacía se aplica al nodo raíz, el proc
 {: file="salida.xml" }
 
 {:.subsection}
-### La instrucción `xsl:value-of`
+### La instrucción xsl:value-of
 
 La instrucción `xsl:value-of` extrae el contenido del nodo seleccionado.
 
@@ -634,7 +634,7 @@ En el ejemplo siguiente, los autores se obtienen gracias a la regla que extrae e
 ```
 {: file="salida.xml" }
 
-También se pueden extraer los valores de los atributos, utilizando @.
+También se pueden extraer los valores de los atributos, utilizando `@`.
 
 En el ejemplo siguiente, las fechas de publicación se obtienen gracias a la regla que extraen el valor del atributo y los títulos y autores se obtienen porque al no haber reglas para ese nodo se extrae el contenido.
 
@@ -672,7 +672,7 @@ En el ejemplo siguiente, las fechas de publicación se obtienen gracias a la reg
 
 Se puede generar texto escribiéndolo en la regla, por ejemplo, código html.
 
-En el ejemplo siguiente se obtienen los nombres de los autores porque la regla selecciona el nodo `<libro>` como en el ejemplo, 2-1, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
+En el ejemplo siguiente se obtienen los nombres de los autores porque la regla selecciona el nodo `<libro>` como en el ejemplo, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -697,7 +697,7 @@ En el ejemplo siguiente se obtienen los nombres de los autores porque la regla s
 
 Dentro de la regla podemos hacer referencia a varios subnodos.
 
-En el ejemplo siguiente se obtienen los nombres de los autores y los títulos de los libros porque la regla selecciona el nodo `<libro>` como en el ejemplo, 2-1, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
+En el ejemplo siguiente se obtienen los nombres de los autores y los títulos de los libros porque la regla selecciona el nodo `<libro>` como en el ejemplo, pero además generamos las etiquetas `<p>`. El resultado sigue sin verse bien en el navegador, porque aunque hay etiquetas `<p>`, falta la etiqueta global `<html>`.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -726,7 +726,7 @@ En el ejemplo siguiente se obtienen los nombres de los autores y los títulos de
 ```
 {: file="salida.xml" }
 
-Los siguientes ejemplos intentan conseguir el mismo resultado que el ejemplo anterior (ejemplo 3-2), pero utilizando dos reglas, y no lo consiguen:
+Los siguientes ejemplos intentan conseguir el mismo resultado que el ejemplo anterior , pero utilizando dos reglas, y no lo consiguen:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -787,7 +787,6 @@ Los siguientes ejemplos intentan conseguir el mismo resultado que el ejemplo ant
 Además de generar etiquetas, se puede generar texto.
 
 En el ejemplo siguiente se generan frases a partir del contenido de los nodos.
-
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -952,6 +951,8 @@ Por ejemplo, a partir del siguiente documento XML, se quiere generar la etiqueta
     <imagen>cc-bysa-88x31.png</imagen>
   </licencia>
 </licencias>
+```
+
 No se puede utilizar la instrucción `xsl:value-of` como en el ejemplo incorrecto siguiente:
 
 ```xml
