prueba pdf en xpath

--- a/_posts/2024-03-21-pandoc.md
+++ b/_posts/2024-03-21-pandoc.md
@@ -38,43 +38,69 @@ docker run pandoc/extra
 
 Con el siguiente comando y los siguientes ficheros de configuración me genero este [PDF](/assets/img/pandoc/2024-03-01-tarea-xsl.pdf) a mi gusto:
 
+Para PC fijo, creamos el contenedor de Docker:
+
 ```console
-docker run --rm --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io\:/data" `
+$docker run -d -it --volume "D:\GitHub\marcosruiz.github.io:/data" `
+--volume "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
+--name mruizg `
+--restart=no --runtime=runc pandoc/extra
+```
+
+Para portatil, creamos el contenedor de Docker:
+
+```console
+$docker run -d -it --volume "C:\Users\marco\Documents\GitHub\marcosruiz.github.io:/data" `
 --volume "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel:/root/.pandoc/templates" `
-pandoc/extra /data/_posts/2024-03-01-tarea-xsl.md `
--o /data/pdf/2024-03-01-tarea-xsl.pdf `
---metadata-file /data/pandoc/metadata.yaml `
---defaults /data/pandoc/defaults.yaml `
---lua-filter /data/pandoc/filter.lua
+--name mruizg `
+--restart=no --runtime=runc pandoc/extra
+```
+
+Entramos en el contenedor de Docker:
+
+```console
+$docker exec -it b9c2ae80ad7723523c71d532a0e3901f26dd0c67bba7273e65965b6ef8cc3194 sh
+```
+
+Dentro del contenedor de docker ejecutamos:
+
+```console
+#apk update && apk add texlive-full
+#tlmgr install svg
 ```
 
 ```powershell
-# Definir los patrones de archivo
+# Para PC torre
 $githubProjectFolder = "D:\GitHub\marcosruiz.github.io"
 $templateFolder = "C:\Users\marco\MEGA\CURSO 23 24\Plantillas\Eisvogel"
 
-$routes = "representacion-informacion", "introduccion-lenguajes-marcas", "xml", "html", "css", "sindicacion-contenidos", "dtd", "xsd", "espacios-de-nombres-xml", "xsl", "xpath", "xslt", "xslfo", "xquery", "sistemas-gestion-empresarial", "tarea-formato-svg", "tarea-introduccion-xml", "practica-html", "practica-html-freecodecamp", "practica-html-w3schools", "practica-css-freecodecamp", "practica-css-w3schools", "practica-css-codepip", "tarea-calculadora-html-css", "tarea-rss", "tarea-dtd", "tarea-xsd", "tarea-introduccion-xpath", "markdown", "tarea-xsl", "tarea-introduccion-xquery", "tarea-introduccion-odoo"
+# Para portatil
+$githubProjectFolder = "C:\Users\marco\Documents\GitHub\marcosruiz.github.io"
+$templateFolder = "C:\Users\marco\Documents\MEGA\CURSO 23 24\Plantillas\Eisvogel"
 
-# Iterar sobre cada patrón de archivo
+$routes = "css", "dtd", "espacios-de-nombres-xml", "html", "introduccion-lenguajes-marcas", "markdown", "practica-css-codepip", "practica-css-freecodecamp", "practica-css-w3schools", "practica-html", "practica-html-freecodecamp", "practica-html-w3schools", "representacion-informacion", "sindicacion-contenidos", "sistemas-gestion-empresarial", "tarea-calculadora-html-css", "tarea-dtd", "tarea-formato-svg", "tarea-introduccion-odoo", "tarea-introduccion-xpath", "tarea-introduccion-xml", "tarea-introduccion-xquery", "tarea-rss", "tarea-xsd", "tarea-xsl", "xml", "xpath", "xquery", "xsl", "xslfo", "xslt"
+
+$routes = "sindicacion-contenidos"
+
+# Iterar sobre cada patron de archivo
 foreach ($route in $routes) {
   $pattern = "[0-9\-]{11}" + $route + "\.md"
 
-  # Obtener el archivo correspondiente al patrón
+  # Obtener el archivo correspondiente al patron
   $files = Get-ChildItem "$githubProjectFolder\_posts" | Where-Object { $_.Name -match $pattern }
 
   $file = $files[0]
 
   $resourcePath = "/data/assets/img/" + $route
 
-  # Ejecutar el comando Docker Pandoc para el archivo encontrado
-  docker run --rm --volume "$($githubProjectFolder):/data" `
-    --volume "$($templateFolder):/root/.pandoc/templates" `
-    pandoc/extra "/data/_posts/$($file.Name)" `
+  docker exec aaa230b91f7592b6f2e74372eccfc2038caf5c5ebc16865aea3d9ab11ef8923d pandoc "/data/_posts/$($file.Name)" `
     -o "/data/pdf/$($route).pdf" `
     --metadata-file /data/pandoc/metadata.yaml `
     --defaults /data/pandoc/defaults.yaml `
     --resource-path $resourcePath `
+    --from markdown `
     --lua-filter /data/pandoc/filter.lua
+
 }
 ```
 {: file="exportarLmsgiAPdf.ps1" }
